--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
     <link rel = "stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id = "grid-container">
+        <div id = "sidebar">
+            <ul id = "menu">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+            <ul id = "help">
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+        <div id = "header">
+            <div id = "action-btns">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+        <div id="main-page">
+            <div id="projects">
+                <div class = "project-card"><b>super cool project</b></div>
+                <div class = "project-card"><b>less cool project</b></div>
+                <div class = "project-card"><b>impossible app</b></div>
+                <div class = "project-card"><b>easy peasy app</b></div>
+                <div class = "project-card"><b>ad blocker</b></div>
+                <div class = "project-card"><b>money maker</b></div>
+            </div>
+            <div id="announcements">
+                <div class = "announcement-preview">site maintenance</div>
+                <div class = "announcement-preview">community share day</div>
+                <div class = "announcement-preview">updated privacy policy</div>
+            </div>
+            <div id = "trending">
+                <div class = "trending-card"> @tegan</div>
+                <div class = "trending-card"> @morgan</div>
+                <div class = "trending-card"> @kendall</div>
+                <div class = "trending-card"> @alex</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
