added circle image to replace icons and adding to header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel = "stylesheet" href="style.css">
+    <style></style>
 </head>
 <body>
     <div id = "grid-container">
         <div id = "sidebar">
+            <div id = "title">Dashboard</div>
             <ul id = "menu">
                 <li>Home</li>
                 <li>Profile</li>
@@ -24,6 +26,11 @@
             </ul>
         </div>
         <div id = "header">
+            <div id = "search-bar"><p>search</p></div>
+            <div id = "notifications">bell</div>
+            <div id = "profile"><img src = "images/circle.png"><b>Morgan Oakley</b></div>
+            <div id = "greeting">Hi there,</div>
+            <div id = "name">Morgan Oakley</div>
             <div id = "action-btns">
                 <button>New</button>
                 <button>Upload</button>
