added card resizing and cleaned up header

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         </div>
         <div id = "header">
             <div id = "search-bar"><p>search</p></div>
-            <div id = "notifications">bell</div>
             <div id = "profile"><img src = "images/circle.png"><b>Morgan Oakley</b></div>
-            <div id = "greeting">Hi there,</div>
-            <div id = "name">Morgan Oakley</div>
+            <div id = "greeting">
+                <h5>Hi there,</h5>
+                <h2>Morgan Oakley</h2>
+            </div>
             <div id = "action-btns">
                 <button>New</button>
                 <button>Upload</button>
@@ -39,12 +40,24 @@
         </div>
         <div id="main-page">
             <div id="projects">
-                <div class = "project-card"><b>super cool project</b></div>
-                <div class = "project-card"><b>less cool project</b></div>
-                <div class = "project-card"><b>impossible app</b></div>
-                <div class = "project-card"><b>easy peasy app</b></div>
-                <div class = "project-card"><b>ad blocker</b></div>
-                <div class = "project-card"><b>money maker</b></div>
+                <div class = "project-card"><b>super cool project</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in </p>
+                </div>
+                <div class = "project-card"><b>less cool project</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex  </p>
+                </div>
+                <div class = "project-card"><b>impossible app</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  </p>
+                </div>
+                <div class = "project-card"><b>easy peasy app</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat </p>
+                </div>
+                <div class = "project-card"><b>ad blocker</b>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in </p>
+                </div>
+                <div class = "project-card"><b>money maker</b>
+                    <p> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. , quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in </p>
+                </div>
             </div>
             <div id="announcements">
                 <div class = "announcement-preview">site maintenance</div>
