fixed size of header

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
             <div id = "search-bar"><p>search</p></div>
             <div id = "profile"><img src = "images/circle.png"><b>Morgan Oakley</b></div>
             <div id = "greeting">
-                <h5>Hi there,</h5>
-                <h2>Morgan Oakley</h2>
+                <img src = "images/circle.png">
+                <div>
+                    <h5>Hi there,</h5>
+                    <h2>Morgan Oakley</h2>
+                </div>
             </div>
             <div id = "action-btns">
                 <button>New</button>
