--- a/index.html
+++ b/index.html
@@ -63,15 +63,45 @@
                 </div>
             </div>
             <div id="announcements">
-                <div class = "announcement-preview">site maintenance</div>
-                <div class = "announcement-preview">community share day</div>
-                <div class = "announcement-preview">updated privacy policy</div>
+                <div class = "announcement-preview"><b>Site Maintenance</b>
+                    <p>Consectetur adipiscing elit, sed do eiusmod tempor Duis aute irure dolor in reprehenderit in </p>
+                </div>
+                <div class = "announcement-preview"><b>Community Share Day</b>
+                    <p>Lorem ipsum dolor sit amet, Duis aute irure dolor in reprehenderit in </p>
+                </div>
+                <div class = "announcement-preview"><b>Updated Privacy Policy</b>
+                    <p>Lorem ipsum dolor sit amet ut labore et dolore magna aliqua. Ut enim ad minim veniam aliquip ex ea commodo consequat </p>
+                </div>
             </div>
             <div id = "trending">
-                <div class = "trending-card"> @tegan</div>
-                <div class = "trending-card"> @morgan</div>
-                <div class = "trending-card"> @kendall</div>
-                <div class = "trending-card"> @alex</div>
+                <div class = "trending-card">
+                    <img src = "images/circle.png"> 
+                    <div>
+                        <h6>@tegan</h6>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div class = "trending-card"> 
+                    <img src = "images/circle.png">
+                    <div>
+                        <h6>@morgan</h6>
+                        <p>Super Cool Project</p>
+                    </div>
+                </div>
+                <div class = "trending-card"> 
+                    <img src = "images/circle.png">
+                    <div>
+                        <h6>@kendall</h6>
+                        <p>Life Changing App</p>
+                    </div>
+                </div>
+                <div class = "trending-card"> 
+                    <img src = "images/circle.png">
+                    <div>
+                        <h6>@alex</h6>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
